hubSide/force-app/main/default/objects/Case/fields/Pays_sinistre__c.field-meta.xml
<CustomField>
    <fullName>Pays_sinistre__c</fullName>
    <label>Pays du sinistre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France Métropolitaine</fullName>
            </value>
            <value>
                <fullName>Etranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>