hubSide/force-app/main/default/objects/Case/fields/Pouss_par_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Pouss_par_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forcer le paiement</label>
    <type>Checkbox</type>
</CustomField>