hubSide/force-app/main/default/objects/Case/fields/Prime_sur_reparation__c.field-meta.xml
<CustomField>
    <fullName>Prime_sur_reparation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prime sur réparation</label>
    <type>Checkbox</type>
</CustomField>