hubSide/force-app/main/default/objects/Case/fields/provision_sinistre__c.field-meta.xml
<CustomField>
    <fullName>provision_sinistre__c</fullName>
    <label>Provision du sinistre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>