hubSide/force-app/main/default/objects/Case/fields/R_ponse_sur_le_blocage__c.field-meta.xml
<CustomField>
    <fullName>R_ponse_sur_le_blocage__c</fullName>
    <label>Réponse sur le blocage</label>
    <type>TextArea</type>
</CustomField>