hubSide/force-app/main/default/objects/Case/fields/Raison__c.field-meta.xml
<CustomField>
    <fullName>Raison__c</fullName>
    <label>Raison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>