hubSide/force-app/main/default/objects/Case/fields/Raison_commission__c.field-meta.xml
<CustomField>
    <fullName>Raison_commission__c</fullName>
    <description>Détails sur la raison de mise en Commission.
Le motif concernant la raison pour laquelle le dossier est en attente.</description>
    <label>Raison mise en commission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>