hubSide/force-app/main/default/objects/Case/fields/Raison_du_blocage__c.field-meta.xml
<CustomField>
    <fullName>Raison_du_blocage__c</fullName>
    <label>Raison du blocage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question en cas de doute</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>