hubSide/force-app/main/default/objects/Case/fields/Raison_ligne_non_suspendue__c.field-meta.xml
<CustomField>
    <fullName>Raison_ligne_non_suspendue__c</fullName>
    <label>Raison ligne non suspendue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>