hubSide/force-app/main/default/objects/Case/fields/remaining_ceiling__c.field-meta.xml
<CustomField>
    <fullName>remaining_ceiling__c</fullName>
    <description>Plafond du contrat associé lors de la déclaration</description>
    <label>Plafond restant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>