hubSide/force-app/main/default/objects/Case/fields/Remboursement_prime__c.field-meta.xml
<CustomField>
    <fullName>Remboursement_prime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remboursement (prime)</label>
    <type>Checkbox</type>
</CustomField>