hubSide/force-app/main/default/objects/Case/fields/Reponse_commission__c.field-meta.xml
<CustomField>
    <fullName>Reponse_commission__c</fullName>
    <description>Réponse apportée suite à la commission.</description>
    <label>Réponse de la comission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>