hubSide/force-app/main/default/objects/Case/fields/Reponse_GS__c.field-meta.xml
<CustomField>
    <fullName>Reponse_GS__c</fullName>
    <description>Explications et détails du refus établi avec rappel CGS. Stipuler le ou les articles des CG obligatoirement.</description>
    <label>Réponse GS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>