hubSide/force-app/main/default/objects/Case/fields/Reponse_recours__c.field-meta.xml
<CustomField>
    <fullName>Reponse_recours__c</fullName>
    <description>Tracer la réponse apporter au recours avec appui sur CGS.</description>
    <label>Réponse au recours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>