hubSide/force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Indique la typologie de la prise en charge (réparation/échange/prime/prime pour réparation). Découle d’une décision GS accepté 
A remplir pour réparation / échange / prime
Prime pour réparation (également pour compensation d’un clos réparé)
Prime (compensation d’un clos échangé)</description>
    <label>Résolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vide</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Prime magasin</fullName>
            </value>
            <value>
                <fullName>Prime pour réparation</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
            <value>
                <fullName>Échange</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
                <label>Résiliation</label>
            </value>
            <value>
                <fullName>TerminationAndRefund</fullName>
                <label>Résiliation et remboursement</label>
            </value>
            <value>
                <fullName>Refund</fullName>
                <label>Remboursement</label>
            </value>
            <value>
                <fullName>ClaimCare</fullName>
                <label>Prise en charge sinistre</label>
            </value>
            <value>
                <fullName>Explanations</fullName>
                <label>Explications</label>
            </value>
            <value>
                <fullName>Une mauvaise interprétation du contrat par un gestionnaire sinistre / erreur humaine</fullName>
            </value>
            <value>
                <fullName>A la demande des assureurs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>