hubSide/force-app/main/default/objects/Case/fields/Si_autres_lieu__c.field-meta.xml
<CustomField>
    <fullName>Si_autres_lieu__c</fullName>
    <label>Si autres, précisez le lieu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>