hubSide/force-app/main/default/objects/Case/fields/SinisterComment__c.field-meta.xml
<CustomField>
    <fullName>SinisterComment__c</fullName>
    <description>Précisions complémentaires sur la déclaration de sinistre associée à la réclamation</description>
    <label>Commentaire Sinistre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>