hubSide/force-app/main/default/objects/Case/fields/Solde_communications_frauduleuses__c.field-meta.xml
<CustomField>
    <fullName>Solde_communications_frauduleuses__c</fullName>
    <label>Solde communications frauduleuses</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>