hubSide/force-app/main/default/objects/Case/fields/SolutionComment__c.field-meta.xml
<CustomField>
    <fullName>SolutionComment__c</fullName>
    <description>Précisions complémentaires sur le traitement et la solution de la réclamation</description>
    <label>Commentaire solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>