hubSide/force-app/main/default/objects/Case/fields/StatusBAppli__c.field-meta.xml
<CustomField>
    <fullName>StatusBAppli__c</fullName>
    <label>Statut B-Appli</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>opened</fullName>
                <label>Ouvert</label>
            </value>
            <value>
                <fullName>being_examined</fullName>
                <label>En cours d&apos;examen</label>
            </value>
            <value>
                <fullName>file_reception_incomplete</fullName>
                <label>Réception dossier incomplet</label>
            </value>
            <value>
                <fullName>being_repaired</fullName>
                <label>En cours de réparation</label>
            </value>
            <value>
                <fullName>being_re_examined</fullName>
                <label>En cours de réexamen</label>
            </value>
            <value>
                <fullName>being_exchanged</fullName>
                <label>En cours d&apos;échange</label>
            </value>
            <value>
                <fullName>closed_exchange</fullName>
                <label>Clos échangé</label>
            </value>
            <value>
                <fullName>closed_cancelled</fullName>
                <label>Clos annulé</label>
            </value>
            <value>
                <fullName>closed_rejected</fullName>
                <label>Clos rejeté</label>
            </value>
            <value>
                <fullName>closed_repaired</fullName>
                <label>Clos réparé</label>
            </value>
            <value>
                <fullName>closed_without_further_action</fullName>
                <label>Clos classé sans suite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>