hubSide/force-app/main/default/objects/Case/fields/Statut_commission__c.field-meta.xml
<CustomField>
    <fullName>Statut_commission__c</fullName>
    <label>Statut de la commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ouvert</fullName>
            </value>
            <value>
                <fullName>Accepté</fullName>
            </value>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>