hubSide/force-app/main/default/objects/Case/fields/SubTheme1__c.field-meta.xml
<CustomField>
    <fullName>SubTheme1__c</fullName>
    <description>Sous thème principal de la réclamation</description>
    <label>Sous Thème 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Theme__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contestation de souscription SI</fullName>
            </value>
            <value>
                <fullName>Contestation de souscription SE</fullName>
            </value>
            <value>
                <fullName>Absence prise en compte résiliation</fullName>
            </value>
            <value>
                <fullName>Difficultés pour résilier</fullName>
            </value>
            <value>
                <fullName>Prélèvements après résiliation</fullName>
            </value>
            <value>
                <fullName>Résiliation abusive</fullName>
            </value>
            <value>
                <fullName>ClaimManagementLitigation</fullName>
                <label>Litige gestion sinistre</label>
            </value>
            <value>
                <fullName>ClaimManagementDelay</fullName>
                <label>Retard gestion sinistre</label>
            </value>
            <value>
                <fullName>ClaimRefusal</fullName>
                <label>Refus de sinistre</label>
            </value>
            <value>
                <fullName>PDS</fullName>
            </value>
            <value>
                <fullName>Délais de remboursement</fullName>
            </value>
            <value>
                <fullName>Hausse tarifaire</fullName>
            </value>
            <value>
                <fullName>Demande copie contrat ou information</fullName>
            </value>
            <value>
                <fullName>Litige ODR</fullName>
            </value>
            <value>
                <fullName>Non réception offre commerciale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>