hubSide/force-app/main/default/objects/Case/fields/SubTheme2__c.field-meta.xml
<CustomField>
    <fullName>SubTheme2__c</fullName>
    <description>Sous thème secondaire de la réclamation</description>
    <label>Sous Thème 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubTheme1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Contestation de signature SI</fullName>
            </value>
            <value>
                <fullName>Demande copie contrat ou information SI</fullName>
            </value>
            <value>
                <fullName>Explications floues SI</fullName>
            </value>
            <value>
                <fullName>Incompréhension montants prélévements SI</fullName>
            </value>
            <value>
                <fullName>Litige ODR SI</fullName>
            </value>
            <value>
                <fullName>Contestation de signature SE</fullName>
            </value>
            <value>
                <fullName>Demande copie contrat ou information SE</fullName>
            </value>
            <value>
                <fullName>Explications floues SE</fullName>
            </value>
            <value>
                <fullName>Incompréhension montants prélévements SE</fullName>
            </value>
            <value>
                <fullName>Litige ODR SE</fullName>
            </value>
            <value>
                <fullName>Difficultés pour résilier</fullName>
            </value>
            <value>
                <fullName>Prélévements après résiliation</fullName>
            </value>
            <value>
                <fullName>Blocage sinistre suite impayé</fullName>
            </value>
            <value>
                <fullName>Délais de remboursement</fullName>
            </value>
            <value>
                <fullName>Insatisfaction réparation/échange</fullName>
            </value>
            <value>
                <fullName>Litige pièces justificatives complémentaires</fullName>
            </value>
            <value>
                <fullName>Litige suite problème transporteur</fullName>
            </value>
            <value>
                <fullName>Retard gestion sinistre</fullName>
            </value>
            <value>
                <fullName>Refus lié au délai de déclaration/pièces</fullName>
            </value>
            <value>
                <fullName>Refus produit non assuré</fullName>
            </value>
            <value>
                <fullName>Délais de remboursement PDS</fullName>
            </value>
            <value>
                <fullName>Hausse tarifaire PDS</fullName>
            </value>
            <value>
                <fullName>Incompréhension montants prélévements PDS</fullName>
            </value>
            <value>
                <fullName>Litige ODR PDS</fullName>
            </value>
            <value>
                <fullName>Insatisfaction du service PDS</fullName>
            </value>
            <value>
                <fullName>Insatisfaction du service Buy Back</fullName>
            </value>
            <value>
                <fullName>Insatisfaction des services PDS et Buy Back</fullName>
            </value>
            <value>
                <fullName>Demande copie contrat ou information PDS</fullName>
            </value>
            <value>
                <fullName>Demande copie contrat ou information DR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>