hubSide/force-app/main/default/objects/Case/fields/SubTheme3__c.field-meta.xml
<CustomField>
    <fullName>SubTheme3__c</fullName>
    <description>Sous thème tertiaire de la réclamation</description>
    <label>Sous Thème 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SubTheme2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande copie contrat ou information</fullName>
            </value>
            <value>
                <fullName>Explications floues</fullName>
            </value>
            <value>
                <fullName>Incompréhension montants prélèvements</fullName>
            </value>
            <value>
                <fullName>Litige ODR</fullName>
            </value>
            <value>
                <fullName>Contestation de signature</fullName>
            </value>
            <value>
                <fullName>Insatisfaction du service PDS</fullName>
            </value>
            <value>
                <fullName>Insatisfaction du service Buy Back</fullName>
            </value>
            <value>
                <fullName>Insatisfaction du services PDS et Buy Back</fullName>
            </value>
            <value>
                <fullName>Hausse tarifaire PDS</fullName>
            </value>
            <value>
                <fullName>Délais de remboursement</fullName>
            </value>
            <value>
                <fullName>Hausse tarifaire formule</fullName>
            </value>
            <value>
                <fullName>Hausse tarifaire PDS et formule</fullName>
            </value>
            <value>
                <fullName>Non réception offre commerciale</fullName>
            </value>
            <value>
                <fullName>Délais de remboursements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>