hubSide/force-app/main/default/objects/Case/fields/Suivi_plafond__c.field-meta.xml
<CustomField>
    <fullName>Suivi_plafond__c</fullName>
    <formula>IF(
    Asset.Indemnisation_contrat_restante__c - Montant_sinistre__c &lt; 0,
    IMAGE(&quot;/resource/KO_Icon&quot;, &quot;KO&quot;, 32, 32),
    IMAGE(&quot;/resource/OK_Icon&quot;, &quot;OK&quot;, 32, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suivi plafond</label>
    <type>Text</type>
</CustomField>