hubSide/force-app/main/default/objects/Case/fields/Suspension_de_la_ligne__c.field-meta.xml
<CustomField>
    <fullName>Suspension_de_la_ligne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspension de la ligne</label>
    <type>Checkbox</type>
</CustomField>