hubSide/force-app/main/default/objects/Case/fields/TECH_ApprovalProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>TECH_ApprovalProcessStatus__c</fullName>
    <description>Field use to know if there are an approval process in progress, use it in approval process</description>
    <label>TECH_ApprovalProcessStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalProcess_Status</valueSetName>
    </valueSet>
</CustomField>