hubSide/force-app/main/default/objects/Case/fields/TECH_AssetCoverage__c.field-meta.xml
<CustomField>
    <fullName>TECH_AssetCoverage__c</fullName>
    <formula>Asset.Formule__r.Name</formula>
    <label>TECH_AssetCoverage</label>
    <type>Text</type>
</CustomField>