hubSide/force-app/main/default/objects/Case/fields/TECH_AssetName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AssetName__c</fullName>
    <formula>Asset.Name</formula>
    <label>TECH_AssetName</label>
    <type>Text</type>
</CustomField>