hubSide/force-app/main/default/objects/Case/fields/TECH_ByPassTrigger__c.field-meta.xml
<CustomField>
    <fullName>TECH_ByPassTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_ByPassTrigger</label>
    <type>Checkbox</type>
</CustomField>