hubSide/force-app/main/default/objects/Case/fields/TECH_CheckChoixClientValidate__c.field-meta.xml
<CustomField>
    <fullName>TECH_CheckChoixClientValidate__c</fullName>
    <formula>IF(OR(TECH_NumberIndemEch__c==0,
					AND(TECH_NumberIndemEch__c&gt;0,
     NOT(ISBLANK(TECH_ExchangeDateChoosed__c)),
	    NOT(ISBLANK(TECH_MatriceCoutChoiceExchange__c)))
						),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CheckChoixClientValidate</label>
    <type>Checkbox</type>
</CustomField>