hubSide/force-app/main/default/objects/Case/fields/TECH_ChosenModel__c.field-meta.xml
<CustomField>
    <fullName>TECH_ChosenModel__c</fullName>
    <description>Modèle choisi en cas d&apos;échange</description>
    <label>TECH_ChosenModel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>