hubSide/force-app/main/default/objects/Case/fields/TECH_ClientAddress__c.field-meta.xml
<CustomField>
    <fullName>TECH_ClientAddress__c</fullName>
    <formula>Asset.Account.PersonContact.MailingStreet &amp; BR() &amp; Asset.Account.PersonContact.MailingPostalCode &amp; &quot; &quot; &amp; Asset.Account.PersonContact.MailingCity &amp; BR() &amp; Asset.Account.PersonContact.MailingCountry</formula>
    <label>Adresse client</label>
    <type>Text</type>
</CustomField>