hubSide/force-app/main/default/objects/Case/fields/TECH_CurrentDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_CurrentDate__c</fullName>
    <description>Date actuelle, pour la création du bordereau de livraison</description>
    <formula>TODAY()</formula>
    <label>TECH_CurrentDate</label>
    <type>Date</type>
</CustomField>