hubSide/force-app/main/default/objects/Case/fields/TECH_DateContrat__c.field-meta.xml
<CustomField>
    <fullName>TECH_DateContrat__c</fullName>
    <formula>Asset.Date_souscription__c</formula>
    <label>TECH_DateContrat</label>
    <type>Date</type>
</CustomField>