hubSide/force-app/main/default/objects/Case/fields/TECH_EqpmClientIMEI__c.field-meta.xml
<CustomField>
    <fullName>TECH_EqpmClientIMEI__c</fullName>
    <formula>Equipement_client__r.Numero_de_serie__c</formula>
    <label>TECH_EqpmClientIMEI</label>
    <type>Text</type>
</CustomField>