hubSide/force-app/main/default/objects/Case/fields/TECH_EqpmSinName__c.field-meta.xml
<CustomField>
    <fullName>TECH_EqpmSinName__c</fullName>
    <description>Name de l&apos;équipement sinistré associé au Case</description>
    <label>TECH_EqpmSinName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>