hubSide/force-app/main/default/objects/Case/fields/TECH_EquipementName__c.field-meta.xml
<CustomField>
    <fullName>TECH_EquipementName__c</fullName>
    <formula>Equipement_client__r.Name</formula>
    <label>TECH_EquipementName</label>
    <type>Text</type>
</CustomField>