hubSide/force-app/main/default/objects/Case/fields/TECH_EtatPaiement__c.field-meta.xml
<CustomField>
    <fullName>TECH_EtatPaiement__c</fullName>
    <formula>TEXT(Asset.Etat_paiement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_EtatPaiement</label>
    <type>Text</type>
</CustomField>