hubSide/force-app/main/default/objects/Case/fields/TECH_ExchangeDateChoosed__c.field-meta.xml
<CustomField>
    <fullName>TECH_ExchangeDateChoosed__c</fullName>
    <description>Use to save the date of equipement sinistre</description>
    <label>TECH_ExchangeDateChoosed</label>
    <type>Date</type>
</CustomField>