hubSide/force-app/main/default/objects/Case/fields/TECH_IsProcessInBatchCalculator__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsProcessInBatchCalculator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_IsProcessInBatchCalculator</label>
    <type>Checkbox</type>
</CustomField>