hubSide/force-app/main/default/objects/Case/fields/TECH_IsToRunBatchCalculator__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsToRunBatchCalculator__c</fullName>
    <formula>IF(AND(TECH_IsProcessInBatchCalculator__c == false,
	      Date_sinistre__c &lt; ADDMONTHS(TODAY(),-1*Asset.Formule__r.Formule_options__r.NbMounthKPIContract__c)), 
			true, 
			false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IsToRunBatchCalculator</label>
    <type>Checkbox</type>
</CustomField>