hubSide/force-app/main/default/objects/Case/fields/TECH_MatriceCoutChoiceExchange__c.field-meta.xml
<CustomField>
    <fullName>TECH_MatriceCoutChoiceExchange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use to know if the customer have validate exchange (link to TECH_CheckChoixClientValidate__c)</description>
    <label>TECH_MatriceCoutChoiceExchange</label>
    <referenceTo>Matrice_cout_equipement__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>