hubSide/force-app/main/default/objects/Case/fields/TECH_MissingDocs__c.field-meta.xml
<CustomField>
    <fullName>TECH_MissingDocs__c</fullName>
    <description>Liste des pièces justificatives attendues</description>
    <label>TECH_MissingDocs</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>