hubSide/force-app/main/default/objects/Case/fields/TECH_Montant_Plafond__c.field-meta.xml
<CustomField>
    <fullName>TECH_Montant_Plafond__c</fullName>
    <formula>Asset.Indemnisation_contrat_restante__c - Montant_sinistre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Montant_Plafond</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>