hubSide/force-app/main/default/objects/Case/fields/TECH_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_Name__c</fullName>
    <formula>Asset.Account.FirstName &amp;&apos; &apos;&amp; Asset.Account.LastName</formula>
    <label>TECH_Name</label>
    <type>Text</type>
</CustomField>