hubSide/force-app/main/default/objects/Case/fields/TECH_NewEqpmClientIMEI__c.field-meta.xml
<CustomField>
    <fullName>TECH_NewEqpmClientIMEI__c</fullName>
    <description>IMEI du nouvel équipement client, lors de l&apos;échange</description>
    <label>TECH_NewEqpmClientIMEI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>