hubSide/force-app/main/default/objects/Case/fields/Tech_Nombre_tache_ouverte__c.field-meta.xml
<CustomField>
    <fullName>Tech_Nombre_tache_ouverte__c</fullName>
    <defaultValue>0</defaultValue>
    <label>#Nombre de tache ouverte</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>