hubSide/force-app/main/default/objects/Case/fields/TECH_NumberAlertApprouved__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberAlertApprouved__c</fullName>
    <label>TECH_NumberAlertApprouved</label>
    <summaryFilterItems>
        <field>Alert__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>