hubSide/force-app/main/default/objects/Case/fields/TECH_NumberAlertRejected__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberAlertRejected__c</fullName>
    <label>TECH_NumberAlertRejected</label>
    <summaryFilterItems>
        <field>Alert__c.Status__c</field>
        <operation>equals</operation>
        <value>Refused</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>