hubSide/force-app/main/default/objects/Case/fields/TECH_NumberAlertVide__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberAlertVide__c</fullName>
    <label>TECH-NumberAlertVide</label>
    <summaryFilterItems>
        <field>Alert__c.Active_Inactive__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>