hubSide/force-app/main/default/objects/Case/fields/TECH_NumberAlertWaiting__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberAlertWaiting__c</fullName>
    <label>TECH_NumberAlertWaiting</label>
    <summaryFilterItems>
        <field>Alert__c.Status__c</field>
        <operation>equals</operation>
        <value>Waiting</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>