hubSide/force-app/main/default/objects/Case/fields/TECH_NumberIndemRepCreer__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberIndemRepCreer__c</fullName>
    <label>TECH_NumberIndemRepCreer</label>
    <summaryFilterItems>
        <field>Mouvements_financiers__c.Cout_choisi__c</field>
        <operation>equals</operation>
        <value>Réparation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Mouvements_financiers__c.Statut__c</field>
        <operation>equals</operation>
        <value>Crée</value>
    </summaryFilterItems>
    <summaryForeignKey>Mouvements_financiers__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>