hubSide/force-app/main/default/objects/Case/fields/TECH_NumberIndemToProcess__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberIndemToProcess__c</fullName>
    <formula>TECH_NumberIndemApprob__c +  TECH_NumberIndemCreated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_NumberIndemToProcess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>